4.2
 * Remove ephemeral snapshot marker file and introduce a flag to SnapshotManifest (CASSANDRA-16911)
 * Add a virtual table that exposes currently running queries (CASSANDRA-15241)
 * Allow sstableloader to specify table without relying on path (CASSANDRA-16584)
 * Fix TestGossipingPropertyFileSnitch.test_prefer_local_reconnect_on_listen_address (CASSANDRA-17700)
 * Add ByteComparable API (CASSANDRA-6936)
 * Add guardrail for maximum replication factor (CASSANDRA-17500)
 * Increment CQLSH to version 6.2.0 for release 4.2 (CASSANDRA-17646)
 * Adding support to perform certificate based internode authentication (CASSANDRA-17661)
 * Option to disable CDC writes of repaired data (CASSANDRA-17666)
 * When a node is bootstrapping it gets the whole gossip state but applies in random order causing some cases where StorageService will fail causing an instance to not show up in TokenMetadata (CASSANDRA-17676)
 * Add CQLSH command SHOW REPLICAS (CASSANDRA-17577)
 * Add guardrail to allow disabling of SimpleStrategy (CASSANDRA-17647)
 * Change default directory permission to 750 in packaging (CASSANDRA-17470)
 * Adding support for TLS client authentication for internode communication (CASSANDRA-17513)
 * Add new CQL function maxWritetime (CASSANDRA-17425)
 * Add guardrail for ALTER TABLE ADD / DROP / REMOVE column operations (CASSANDRA-17495)
 * Rename DisableFlag class to EnableFlag on guardrails (CASSANDRA-17544)
Merged from 4.1:
 * min_tracked_partition_size_bytes parameter from 4.1 alpha1 was renamed to min_tracked_partition_size (CASSANDRA-17733)
 * Remove commons-lang dependency during build runtime (CASSANDRA-17724)
 * Relax synchronization on StreamSession#onError() to avoid deadlock (CASSANDRA-17706)
 * Fix AbstractCell#toString throws MarshalException for cell in collection (CASSANDRA-17695)
 * Add new vtable output option to compactionstats (CASSANDRA-17683)
 * Fix commitLogUpperBound initialization in AbstractMemtableWithCommitlog (CASSANDRA-17587)