@@ -66,7 +66,8 @@ public class SnapshotDetailsTabularData
         }
         catch (OpenDataException e)
         {
-            throw Throwables.propagate(e);
+            Throwables.throwIfUnchecked(e);
+            throw new RuntimeException(e);
         }
     }
 
