@@ -59,7 +59,8 @@ public class CompactionHistoryTabularData
         }
         catch (OpenDataException e)
         {
-            throw Throwables.propagate(e);
+            Throwables.throwIfUnchecked(e);
+            throw new RuntimeException(e);
         }
     }
 
