@@ -25,7 +25,6 @@ import java.util.Map;
 import javax.management.openmbean.*;
 
 import com.google.common.base.Preconditions;
-import com.google.common.base.Throwables;
 
 import org.apache.cassandra.repair.consistent.RepairedState;
 
@@ -47,7 +46,7 @@ public class RepairStats
             }
             catch (OpenDataException e)
             {
-                throw Throwables.propagate(e);
+                throw new RuntimeException(e);
             }
         }
 
@@ -75,7 +74,7 @@ public class RepairStats
             }
             catch (OpenDataException e)
             {
-                throw Throwables.propagate(e);
+                throw new RuntimeException(e);
             }
         }
 
@@ -112,7 +111,7 @@ public class RepairStats
         }
         catch (OpenDataException e)
         {
-            throw Throwables.propagate(e);
+            throw new RuntimeException(e);
         }
     }
 
@@ -165,7 +164,7 @@ public class RepairStats
         }
         catch (OpenDataException e)
         {
-            throw Throwables.propagate(e);
+            throw new RuntimeException(e);
         }
     }
 
