@@ -21,8 +21,6 @@ import java.util.HashMap;
 import java.util.Map;
 import javax.management.openmbean.*;
 
-import com.google.common.base.Throwables;
-
 import org.apache.cassandra.streaming.StreamEvent;
 
 public class SessionCompleteEventCompositeData
@@ -53,7 +51,7 @@ public class SessionCompleteEventCompositeData
         }
         catch (OpenDataException e)
         {
-            throw Throwables.propagate(e);
+            throw new RuntimeException(e);
         }
     }
 
@@ -70,7 +68,7 @@ public class SessionCompleteEventCompositeData
         }
         catch (OpenDataException e)
         {
-            throw Throwables.propagate(e);
+            throw new RuntimeException(e);
         }
     }
 }
