@@ -21,8 +21,6 @@ import java.util.HashMap;
 import java.util.Map;
 import javax.management.openmbean.*;
 
-import com.google.common.base.Throwables;
-
 import org.apache.cassandra.schema.TableId;
 import org.apache.cassandra.streaming.StreamSummary;
 
@@ -53,8 +51,7 @@ public class StreamSummaryCompositeData
         }
         catch (OpenDataException e)
         {
-            throw Throwables.propagate(e);
-        }
+            throw new RuntimeException(e);        }
     }
 
     public static CompositeData toCompositeData(StreamSummary streamSummary)
@@ -69,8 +66,7 @@ public class StreamSummaryCompositeData
         }
         catch (OpenDataException e)
         {
-            throw Throwables.propagate(e);
-        }
+            throw new RuntimeException(e);        }
     }
 
     public static StreamSummary fromCompositeData(CompositeData cd)
