@@ -122,8 +122,8 @@ public class SSTableOfflineRelevel
                 catch (Throwable t)
                 {
                     out.println("Couldn't open sstable: "+sstable.getKey().filenameFor(Component.DATA));
-                    Throwables.propagate(t);
-                }
+                    Throwables.throwIfUnchecked(t);
+                    throw new RuntimeException(t);                }
             }
         }
         if (sstableMultimap.isEmpty())
